--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="jumbotron">
           <h1>Ping Pong</h1>
           <p>A simple game to enhance your numeric skills plus a fun way to play with numbers!:)</p>
-          <h2>Lets play!</h2>
+          <h2>Let's play!</h2>
           <h3>Rules:</h3>
           <ul>
             <li>Numbers divisible by 3 are replaced with "ping"</li>
@@ -23,7 +23,7 @@
 
 
     <!-- Instuctions and info about the creator -->
-    <div id="Info" class="">
+    <div id="Info" class="info">
     <div class="row">
       <div class="col-sm-3 left">
         <h3>About ping pong</h3>
@@ -35,13 +35,13 @@
           </strong>
       </div>
       <div class="col-sm-9 right">
-
-      </div>
-      <div class="mmm">
         <form id="pingpong">
           <input class="submit" id="pong" type="text" placeholder="Type your numbers here">
           <button id="click" type="submit" class="btn btn-primary">Enter</button>
-          <ul class="wewe" id="output"></ul>
+          <ul class="Output" id="output"></ul>
       </div>
+      </div>
+    </div>
+
   </body>
 </html>
