--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
   </head>
-  <body class="container">
+  <body >
+    <div class="container">
     <div class="jumbotron">
           <h1>Ping Pong</h1>
           <p>A simple game to enhance your numeric skills plus a fun way to play with numbers!:)</p>
@@ -33,6 +34,11 @@
         <p><strong>Github username:</strong>
           <br>JaafarMohsa</br>
           </strong>
+        </p>
+        <p><strong>Level 2 Test for:</strong>
+          <br>Javascript</br>
+          </strong>
+        </p>
       </div>
       <div class="col-sm-9 right">
         <form id="pingpong">
@@ -42,6 +48,6 @@
       </div>
       </div>
     </div>
-
+</div>
   </body>
 </html>
