--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Ping Pong</title>
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body >
+    <div class="parallax">
     <div class="container">
     <div class="jumbotron">
-          <h1>Ping Pong</h1>
+          <h1>Ping Pong!</h1>
           <p>A simple game to enhance your numeric skills plus a fun way to play with numbers!:)</p>
           <h2>Let's play!</h2>
           <h3>Rules:</h3>
@@ -24,10 +26,14 @@
 
 
     <!-- Instuctions and info about the creator -->
-    <div id="Info" class="info">
-    <div class="row">
+    <div class="info">
+    <div class="row" >
+      <div id="Info">
       <div class="col-sm-3 left">
-        <h3>About ping pong</h3>
+        <div id="about">
+        <h3>About Ping-Pong</h3>
+      </div>
+      <div id="panel">
         <p><strong> Created by:</strong>
           <br>Jaafar Mohammed</br>
         </p>
@@ -40,14 +46,22 @@
           </strong>
         </p>
       </div>
+      </div>
+    </div>
+    <div id="Pingypongy">
       <div class="col-sm-9 right">
         <form id="pingpong">
-          <input class="submit" id="pong" type="text" placeholder="Type your numbers here">
+          <input class="submit" id="ping" type="text" placeholder="Type your numbers here">
           <button id="click" type="submit" class="btn btn-primary">Enter</button>
           <ul class="Output" id="output"></ul>
       </div>
       </div>
     </div>
 </div>
+</div>
+<footer> Copyright.(c).[2018].[Jaafar's Ping]</footer>
+
+</div>
+
   </body>
 </html>
